create resume from old resume

--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "firebase": "^12.4.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "mammoth": "^1.11.0",
     "next-themes": "^0.3.0",
     "pako": "^1.0.11",
+    "pdfjs-dist": "^2.16.105",
     "playwright": "^1.57.0",
     "puppeteer": "^24.31.0",
     "puppeteer-core": "^24.31.0",
