--- a/netlify.toml
+++ b/netlify.toml
@@ -19,9 +19,69 @@
 [functions."enhance-resume"]
   timeout = 60
 
+# Note: CORS headers are handled dynamically in each function
+# to support multiple origins (production + localhost for dev)
+# See allowedOrigins in each function file
+
+# =============================================================================
+# Security Headers (Production Best Practices)
+# =============================================================================
 [[headers]]
-  for = "/.netlify/functions/*"
+  for = "/*"
   [headers.values]
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Headers = "Content-Type"
-    Access-Control-Allow-Methods = "POST, OPTIONS"
+    # Prevent clickjacking attacks
+    X-Frame-Options = "SAMEORIGIN"
+    # Prevent MIME type sniffing
+    X-Content-Type-Options = "nosniff"
+    # Enable XSS protection
+    X-XSS-Protection = "1; mode=block"
+    # Control referrer information
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    # Permissions policy (formerly Feature-Policy)
+    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
+    # Content Security Policy - adjust as needed for your app
+    # Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://*.firebaseio.com https://*.googleapis.com https://*.supabase.co wss://*.firebaseio.com;"
+
+# =============================================================================
+# Cache Control Headers
+# =============================================================================
+# Static assets - long cache
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# Images - medium cache
+[[headers]]
+  for = "*.png"
+  [headers.values]
+    Cache-Control = "public, max-age=86400"
+
+[[headers]]
+  for = "*.jpg"
+  [headers.values]
+    Cache-Control = "public, max-age=86400"
+
+[[headers]]
+  for = "*.svg"
+  [headers.values]
+    Cache-Control = "public, max-age=86400"
+
+# Fonts - long cache
+[[headers]]
+  for = "*.woff2"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "*.woff"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# =============================================================================
+# SPA Redirects (React Router support)
+# =============================================================================
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
